should log about of item and adj yml

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,4 +15,4 @@ jobs:
           node-version: '14'
       - name: Install dependencies
         run: npm install cypress --save-dev
-      - run: npx cypress run
+      - run: cypress run --browser chrome
