--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,4 +19,4 @@ jobs:
           node-version: '14'
       - name: Install dependencies
         run: npm install cypress --save-dev
-      - run: npm cypress run --browser chrome
+      - run: $(npm bin)/cypress run --browser chrome
